Fixes issue where text too wide for calculator iframe

--- a/app/assets/stylesheets/calculator.css.scss
+++ b/app/assets/stylesheets/calculator.css.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #calculator {
+
+  width: 580px;
   
   div {
     display: none;
